# modArTransformer

./: .gitignore  Main.hs  README.md  checkpoint.ckpt  flake.nix  index.html  main.jsx  modArTransformer.cabal  package-lock.json  package.json  transformer-diagram.jsx
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
.direnv/flake-inputs/: 6rzn8npwf8nnrqywv952zpfyqpd2z07h-source  fqi422bjvbdzamk41jcqxcpj7l56z27q-source
purescript/: index.html  index.js  spago.yaml
purescript/src/: Main.purs
